--- a/.env_example
+++ b/.env_example
@@ -1,4 +1,10 @@
 OPENAI_KEY=<OPENAI_KEY>
+ALGORITHM=<ALGORITHM>
+SECRET=<SECRET>
 DESIGNER_ROLE=<DESIGNER_ROLE>
 PROMPT_ROLE=<PROMPT_ROLE>
 FIRST_CONFIG=<FIRST_CONFIG>
+DATABASE=<DATABASE>
+POSTGRES_HOST=<POSTGRES_HOST>
+POSTGRES_USER=<POSTGRES_USER>
+POSTGRES_PASSWORD=<POSTGRES_PASSWORD>
