Improve dall-e prompt

--- a/.env_example
+++ b/.env_example
@@ -3,6 +3,7 @@ ALGORITHM=<ALGORITHM>
 SECRET=<SECRET>
 DESIGNER_ROLE=<DESIGNER_ROLE>
 PROMPT_ROLE=<PROMPT_ROLE>
+CREATE_PROMPT=<CREATE_PROMPT>
 FIRST_CONFIG=<FIRST_CONFIG>
 DATABASE=<DATABASE>
 POSTGRES_HOST=<POSTGRES_HOST>
