--- a/.env_example
+++ b/.env_example
@@ -5,6 +5,7 @@ DESIGNER_ROLE=<DESIGNER_ROLE>
 PROMPT_ROLE=<PROMPT_ROLE>
 CREATE_PROMPT=<CREATE_PROMPT>
 FIRST_CONFIG=<FIRST_CONFIG>
+DALLE_CONFIG=<DALLE_CONFIG>
 DATABASE=<DATABASE>
 POSTGRES_HOST=<POSTGRES_HOST>
 POSTGRES_USER=<POSTGRES_USER>
