--- a/.env_example
+++ b/.env_example
@@ -10,3 +10,4 @@ DATABASE=<DATABASE>
 POSTGRES_HOST=<POSTGRES_HOST>
 POSTGRES_USER=<POSTGRES_USER>
 POSTGRES_PASSWORD=<POSTGRES_PASSWORD>
+AUTH_KEY=<AUTH_KEY>
