Add organization to enable gpt-4

--- a/.env_example
+++ b/.env_example
@@ -1,5 +1,7 @@
 PORT=<PORT>
 OPENAI_KEY=<OPENAI_KEY>
+GPT_MODEL=<GPT_MODEL>
+OPENAI_ORGANIZATION=<OPENAI_ORGANIZATION>
 ALGORITHM=<ALGORITHM>
 SECRET=<SECRET>
 DESIGNER_ROLE=<DESIGNER_ROLE>
